<resources>
    <string name="app_name">Terra</string>


    <string name="azimuth_label">Azimuth (Degrees):</string>
    <string name="compass_accuracy_label">Accuracy</string>
    <string name="dip_label">Dip (Degrees):</string>

    <!-- TODO: TESTING ONLY STRING RESOURCES -->
    <string name="test_no_compass_value">NO READING</string>


    <!-- Welcome Screen Stuff         -->
    <string name="welcome_header">Welcome! Select an option below to begin.</string>
    <string name="welcome_new_button_text">New Project</string>
    <string name="welcome_open_button_text">Open Existing</string>

    <!-- New Project Screen Stuff         -->
    <string name="new_project_heading">Create a New Project</string>
    <string name="new_project_name_label">Project Name</string>
    <string name="new_project_name_hint">(Required)</string>
    <string name="new_project_description_label">Description</string>
    <string name="new_project_description_hint">(Optional)</string>
    <string name="new_project_button_text">Create</string>

    <!-- Open Existing Project Screen Stuff         -->
    <string name="open_existing_heading">Open an Existing Project:</string>

    <!-- Session Recycler View Stuff (Nothing here for now) -->

    <!-- Home Screen Overview Stuff         -->
    <string name="home_overview_title">Home:</string>

    <!-- Home Screen Bottom Menu Stuff         -->
    <string name="main_bottom_menu_home">Station</string>
    <string name="main_bottom_menu_map">Map</string>
    <string name="main_bottom_menu_list">Data</string>
    <string name="title_activity_testing_bottom_nav_actiity">TestingBottomNavActiity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_add_edit_locality">AddEditLocalityMap</string>

    <!-- Add edit Locality Stuff         -->
    <string name="add_edit_locality_title">My Session Name</string>
    <string name="add_edit_locality_subheading_add">Add Station:</string>
    <string name="add_edit_locality_subheading_edit">Edit Station ?:</string>
    <string name="add_edit_locality_subheading_lat_label">Lat:</string>
    <string name="add_edit_locality_subheading_long_label">Long:</string>
    <string name="add_edit_locality_subheading_acc_label">Accuracy (m)</string>
    <string name="add_edit_locality_ok_button_text">Save</string>

    <!-- Locality RecyclerView Stuff         -->
    <string name="locality_list_item_base">Station </string>
    <string name="locality_list_created_date_base">Created: </string>
    <string name="locality_list_updated_date_base">Updated: </string>
    <string name="locality_list_lat_base">Latitude: </string>
    <string name="locality_list_long_base">Longitude: </string>
    <string name="locality_list_elevation_base">Elevation: </string>

    <!-- Compass Activity Stuff         -->
    <string name="compass_title">Add Compass Measurement</string>
    <string name="compass_azi_label">Azimuth</string>
    <string name="compass_dip_label">Dip</string>
    <string name="compass_disabled_message">COMPASS DISABLED</string>
    <string name="compass_enabled_message">COMPASS ENABLED</string>
    <string name="compass_ok_button_text">Save</string>
    <string name="compass_mode_label">Mode</string>
    <string name="compass_category_label">Feature</string>
    <string name="compass_notes_button_text">Notes</string>

    <!-- Add Measurement Category Stuff        -->
    <string name="dialog_add_meas_cat_title">Add Measurement Category:</string>
    <string name="dialog_add_meas_cat_name">Name:</string>
    <string name="dialog_add_meas_cat_desc_label">Description:</string>
    <string name="dialog_add_meas_cat_button">OK</string>

    <!-- Warnings -->
    <string name="compass_sensor_acc_warning">Warning! Detected a low compass accuracy.  Rotate your phone a few times to recalibrate the sensor.</string>

    <!-- Data Screen Stuff -->
    <string name="data_screen_bottom_menu_compass">Compass Data</string>
    <string name="data_screen_bottom_menu_photos">Photos</string>
    <string name="data_screen_recycler_dip_label">Dip:</string>
    <string name="data_screen_recycler_azi_label">Dip Direction:</string>
    <string name="data_screen_recycler_measurement_mode_label">Measurement:</string>
    <string name="data_screen_recycler_measurement_category">Feature:</string>
    <string name="data_screen_recycler_locality_label">Measurement at Station</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- Export Activity-->
    <string name="export_title">Export Project Data</string>
    <string name="export_description">Save data to a csv file.</string>
    <string name="export_path_default_text">Select a folder</string>
    <string name="export_ok_btn_text">Export</string>

    <string name="rv_empty_card_message">No data to display for this entry</string>
    <string name="rv_empty_card_message_projects">No projects to display</string>
    <string name="rv_empty_card_message_stations">No stations to display</string>
    <string name="rv_empty_card_message_compass">No compass data for this station</string>

    <string name="alert_need_data_message">Welcome! You opened an empty project. Create a new station to start recording data.</string>

    <string name="about_heading">About Terra</string>
    <string name="about_text_main">
        For more information on Terra, visit http://faulted.io\n\n
        Terra\'s icon, Pin, is by Kokota from the Noun Project.\n\n
        Home screen artwork was provided by Vecteezy.\n\n
        Terra also uses ShapeOfView (https://github.com/florent37/ShapeOfView)\n
    </string>

</resources>
