<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blueridgebinary.terra.CreateNewProjectActivity">

    <TextView
        android:id="@+id/tv_create_project_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project_heading"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/tv_create_project_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/new_project_name_label"
        android:textAlignment="viewStart"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_project_heading" />

    <TextView
        android:id="@+id/tv_create_project_description_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_project_description_label"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/et_create_project_name"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/et_create_project_desciption"
        android:layout_width="324dp"
        android:layout_height="108dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/new_project_description_hint"
        android:inputType="textMultiLine"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_project_description_label" />

    <EditText
        android:id="@+id/et_create_project_name"
        android:layout_width="331dp"
        android:layout_height="52dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/new_project_name_hint"
        android:inputType="textPersonName"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_create_project_name_label" />

    <Button
        android:id="@+id/bt_create_project_finish"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/new_project_button_text"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_create_project_desciption"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/bt_create_project_finish"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
