<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv_locality_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="10dp"
        app:cardBackgroundColor="@color/boxBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        card_view:cardCornerRadius="8dp" />


    <TextView
        android:id="@+id/tv_locality_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/locality_list_item_base"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintStart_toEndOf="@+id/image_locality_list_icon_circle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_locality_list_created"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        android:text="@string/locality_list_created_date_base"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_locality_list_elev"
        app:layout_constraintTop_toBottomOf="@+id/tv_locality_list_elev" />


    <RelativeLayout
        android:id="@+id/image_locality_list_icon_circle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.github.florent37.shapeofview.shapes.CircleView
            android:id="@+id/image_locality_list_icon_circleview"
            android:layout_width="68dp"
            android:layout_height="68dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:background="@color/recyclerViewRowDefault"
            android:elevation="0dp"
            app:shape_circle_borderColor="@color/recyclerViewCircleBorder"
            app:shape_circle_borderWidth="2dp">

            <ImageView
                android:id="@+id/image_locality_list_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:src="@drawable/baseline_location_on_black_48"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.github.florent37.shapeofview.shapes.CircleView>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_locality_list_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/locality_list_lat_base"
        app:layout_constraintStart_toStartOf="@+id/tv_locality_list_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_locality_list_name" />

    <TextView
        android:id="@+id/tv_locality_list_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/locality_list_long_base"
        app:layout_constraintStart_toStartOf="@+id/tv_locality_list_lat"
        app:layout_constraintTop_toBottomOf="@+id/tv_locality_list_lat" />

    <TextView
        android:id="@+id/tv_locality_list_elev"
        android:layout_width="wrap_content"
        android:layout_height="17dp"
        android:layout_marginTop="8dp"
        android:elevation="10dp"
        android:text="@string/locality_list_elevation_base"
        app:layout_constraintStart_toStartOf="@+id/tv_locality_list_long"
        app:layout_constraintTop_toBottomOf="@+id/tv_locality_list_long" />


</android.support.constraint.ConstraintLayout>