<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_edit_locality_ok">


        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:map="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map_add_edit_locality"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.blueridgebinary.terra.AddEditLocalityActivity" />

        <ImageView
            android:id="@+id/iv_add_edit_crosshairs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_target_50px" />

    </RelativeLayout>
    <TextView
        android:id="@+id/tv_add_edit_locality_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_edit_locality_title"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/iv_add_edit_location_container"
        android:layout_width="275dp"
        android:layout_height="130dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:src="?attr/colorButtonNormal"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_edit_locality_ok"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintLeft_toRightOf="@+id/imbt_add_edit_locality_toggle_gps"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_edit_locality_subheading" />


    <TextView
        android:id="@+id/tv_add_edit_locality_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_edit_locality_subheading_add"
        android:textAppearance="@android:style/TextAppearance.Material.Subhead"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_edit_locality_title" />

    <ImageButton
        android:id="@+id/imbt_add_edit_locality_toggle_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:checked="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_edit_locality_subheading"
        android:src="@drawable/ic_gps_off_white_36dp"
        android:onClick="toggleGpsEnabled"/>

    <ImageButton
        android:id="@+id/imbt_add_edit_locality_toggle_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_edit_location_white_36dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imbt_add_edit_locality_toggle_gps"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:onClick="toggleMapEditLocation"/>

    <Button
        android:id="@+id/btn_add_edit_locality_ok"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_edit_locality_ok_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imbt_add_edit_locality_toggle_edit"
        />


    <TextView
        android:id="@+id/tv_add_edit_locality_lat_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/add_edit_locality_subheading_lat_label"
        app:layout_constraintLeft_toLeftOf="@+id/iv_add_edit_location_container"
        app:layout_constraintTop_toTopOf="@+id/iv_add_edit_location_container" />

    <EditText
        android:id="@+id/et_add_edit_locality_lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_edit_locality_lat_label"
        app:layout_constraintRight_toRightOf="@+id/iv_add_edit_location_container"
        app:layout_constraintTop_toTopOf="@+id/iv_add_edit_location_container" />

    <EditText
        android:id="@+id/et_add_edit_locality_long"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_edit_locality_long_label"
        app:layout_constraintRight_toRightOf="@+id/iv_add_edit_location_container" />

    <TextView
        android:id="@+id/tv_add_edit_locality_long_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_edit_locality_subheading_long_label"
        app:layout_constraintLeft_toLeftOf="@+id/iv_add_edit_location_container"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_edit_locality_lat_label" />

    <TextView
        android:id="@+id/tv_add_edit_locality_acc_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/add_edit_locality_subheading_acc_label"
        app:layout_constraintLeft_toLeftOf="@+id/iv_add_edit_location_container"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_edit_locality_long_label" />

    <EditText
        android:id="@+id/et_add_edit_locality_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_add_edit_locality_acc_label"
        app:layout_constraintRight_toRightOf="@+id/iv_add_edit_location_container" />

</android.support.constraint.ConstraintLayout>